[gd_scene load_steps=2 format=3 uid="uid://c1c8fbb0by7d3"]

[ext_resource type="Script" path="res://Scripts/BtnCurso.gd" id="1_ecdby"]

[node name="Button" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "texto"
alignment = 0
script = ExtResource("1_ecdby")

[node name="UpdateButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_right = 0.972
anchor_bottom = 1.0
offset_left = -0.200012
offset_right = 0.255981
grow_horizontal = 0
grow_vertical = 0
disabled = true
text = "Actualizar"

[node name="VersionLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -407.0
offset_top = -15.0
offset_right = -288.0
offset_bottom = 11.0
grow_horizontal = 0
grow_vertical = 2
text = "Version: 1."

[node name="DetallerBtn" type="TextureButton" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.688368
anchor_top = 0.00462963
anchor_right = 0.810764
anchor_bottom = 0.998457
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="DetallerBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -21.0
offset_right = 59.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
text = "Detalle"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UpdateButton" to="." method="_on_update_button_pressed"]
